@@ -3,7 +3,7 @@
     "appcache"              : false,
     "cache" : {"allowed" : false},
     "minification" : {
-        "js"    : true,
+        "js"    : false,
         "css"   : true,
         "html"  : true,
         "img"   : true
