@@ -4,20 +4,19 @@ var CloudCommander, DOM, Dropbox;
 (function(){
     "use strict";
     
-    const   cloudcmd                        = CloudCommander,
-            CHOOSER_API                     = 'https://www.dropbox.com/static/api/1/dropbox.js';
-
-    var     CLIENT_ID,
-            DropBoxStore                    = {},
-            options                         = {
-                linkType: "direct",
-                success: function(files) {
-                    console.log("Here's the file link:" + files[0].link);
-                },
-                cancel:  function() {
-                    console.log('Chose something');
-                }
-            };
+    var cloudcmd                        = CloudCommander,
+        CHOOSER_API                     = 'https://www.dropbox.com/static/api/1/dropbox.js',
+        CLIENT_ID,
+        DropBoxStore                    = {},
+        options                         = {
+            linkType: "direct",
+            success: function(files) {
+                console.log("Here's the file link:" + files[0].link);
+            },
+            cancel:  function() {
+                console.log('Chose something');
+            }
+        };
         
     /* PRIVATE FUNCTIONS */
     
@@ -35,7 +34,7 @@ var CloudCommander, DOM, Dropbox;
                 func        :  DropBoxStore.choose
             
             });
-    
+            
             var lDropBoxId = pConfig.dropbox_chooser_key;
             lElement.setAttribute('data-app-key', lDropBoxId);
             document.body.appendChild(lElement);
@@ -43,14 +42,13 @@ var CloudCommander, DOM, Dropbox;
             console.timeEnd('dropbox load');
         });
     }
-
+    
     DropBoxStore.choose = function(){
         Dropbox.choose(options);
     };
-
+    
     DropBoxStore.init                = function(){
         load();
-        this.init = null;
     };
     
     cloudcmd.DropBox    = DropBoxStore;
