@@ -59,11 +59,11 @@
     
     
     exports.createManifest = function(){
-        var lAllNames = main.require('hashes');
+        var lAllNames = main.require('node_modules/minify/hashes');
         if(lAllNames)
             for(var lName in lAllNames){
                 if(lName.indexOf('min') > 0)
-                    lName = './min/' + lName;
+                    lName = 'node_modules/minify/min/' + lName;
                 exports.watch(lName);
             }
         processManifest();
